--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -46,6 +46,7 @@
             android:id="@+id/settings_look"
             android:layout_width="300dp"
             android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/bkg_button">
 
             <ImageView
@@ -61,6 +62,28 @@
                 android:layout_marginRight="10dp"
                 android:gravity="left|center_vertical"
                 android:text="Customize Appearance" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/settings_service"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bkg_button">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="12dp"
+                android:src="@drawable/ic_shortcut" />
+
+            <TextView
+                style="@style/SettingSubtitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="left|center_vertical"
+                android:text="Library Shortcut Service" />
         </LinearLayout>
 
     </LinearLayout>
