--- a/Launcher/App/src/main/res/layout/dialog_app_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_app_details.xml
@@ -13,9 +13,8 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:paddingBottom="20dp"
             android:text="@string/app_details"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
@@ -34,14 +33,15 @@
 
         <ImageView
             android:id="@+id/app_icon"
-            android:layout_width="120dp"
-            android:layout_height="67.5dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="10dp" />
 
         <EditText
             android:id="@+id/app_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             android:layout_weight="1"
             android:autofillHints="text"
             android:backgroundTint="@android:color/white"
@@ -49,12 +49,30 @@
             android:textColor="@android:color/white" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:background="@drawable/bkg_button"
-        android:text="@android:string/ok"
-        android:textColor="@android:color/white" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/launch_mode"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/bkg_button"
+            android:text="@string/launch_in"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/ok"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/bkg_button"
+            android:text="@android:string/ok"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 </LinearLayout>
