--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -20,26 +20,27 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/settings_apps"
+            android:id="@+id/settings_edit"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/bkg_button">
 
             <ImageView
-                android:id="@+id/settings_apps_image"
+                android:id="@+id/settings_edit_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:padding="12dp"
                 android:src="@drawable/ic_editing_on" />
 
             <TextView
+                android:id="@+id/settings_edit_text"
                 style="@style/SettingSubtitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:gravity="left|center_vertical"
-                android:text="Toggle Edit Mode" />
+                android:text="@string/edit_on" />
         </LinearLayout>
 
         <LinearLayout
