--- a/Launcher/App/src/main/res/layout/lv_app_vr.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_vr.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bkg_app"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -26,10 +28,11 @@
             android:id="@+id/imageLabelBg"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bkg_app"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
+            android:scaleX="100"
+            android:scaleY="100"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintDimensionRatio="720:405"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,13 +41,33 @@
             android:id="@+id/imageLabel"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/bkg_app"
-            android:scaleType="fitCenter"
+            android:scaleType="fitStart"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintDimensionRatio="720:405"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center|right"
+            android:shadowColor="#80000000"
+            android:shadowRadius="5"
+            android:singleLine="true"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/imageLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:strokeColor="#80000000"
+            app:strokeWidth="1.5dp"
+            tools:text="App Name Here" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -60,16 +83,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:shadowColor="#80000000"
-        android:shadowRadius="5"
-        android:singleLine="true"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        app:strokeColor="#80000000"
-        app:strokeWidth="1.5dp" />
 </LinearLayout>
