New features, fixes, and UI!

--- a/Launcher/App/src/main/res/drawable/bkg_button_pad.xml
+++ b/Launcher/App/src/main/res/drawable/bkg_button_pad.xml
@@ -4,4 +4,7 @@
     <corners android:radius="10dp" />
     <solid android:color="#1C1C1D" />
 
+    <padding android:left ="15dp" />
+    <padding android:right="15dp" />
+
 </shape>
