--- a/Launcher/App/src/main/res/drawable/left_selected_tab.xml
+++ b/Launcher/App/src/main/res/drawable/left_selected_tab.xml
@@ -5,6 +5,6 @@
     <corners
         android:bottomLeftRadius="200dp"
         android:topLeftRadius="200dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="#5000" />
 
 </shape>
