--- a/Launcher/App/src/main/res/drawable/more_selector.xml
+++ b/Launcher/App/src/main/res/drawable/more_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/ic_more"/> <!-- pressed -->
-    <item android:state_focused="true" android:drawable="@drawable/ic_more"/> <!-- focused -->
+    <item android:state_pressed="true" android:drawable="@drawable/more_shadow"/> <!-- pressed -->
+    <item android:state_focused="true" android:drawable="@drawable/more_shadow"/> <!-- focused -->
+    <item android:state_hovered="true" android:drawable="@drawable/more_shadow"/> <!-- hovered -->
 </selector>
