--- a/Launcher/App/src/main/res/drawable/right_selected_tab.xml
+++ b/Launcher/App/src/main/res/drawable/right_selected_tab.xml
@@ -5,6 +5,6 @@ android:shape="rectangle">
     <corners
         android:bottomRightRadius="200dp"
         android:topRightRadius="200dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="#5000" />
 
 </shape>
