--- a/Launcher/App/src/main/res/drawable/selected_tab.xml
+++ b/Launcher/App/src/main/res/drawable/selected_tab.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="200dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="#5000" />
 
 </shape>
