--- a/Launcher/App/src/main/res/layout/dialog_app_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_app_details.xml
@@ -79,17 +79,17 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="@drawable/bkg_button"
+            android:background="@drawable/bkg_button_pad"
             android:text="@string/launch_in"
             android:textColor="@android:color/white" />
 
         <Button
-            android:id="@+id/ok"
+            android:id="@+id/cancel"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/bkg_button"
+            android:background="@drawable/bkg_button_pad"
             android:text="@android:string/ok"
             android:textColor="@android:color/white" />
 
