--- a/Launcher/App/src/main/res/layout/dialog_look.xml
+++ b/Launcher/App/src/main/res/layout/dialog_look.xml
@@ -1,161 +1,241 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:orientation="vertical">
 
-    <TextView
-        style="@style/SettingTitle"
-        android:layout_width="match_parent"
+    <LinearLayout android:id="@+id/layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Customize Appearance" />
+        android:orientation="vertical"
+        android:padding="20dp">
 
-    <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bkg_button"
-        android:orientation="horizontal"
-        android:weightSum="6">
+        <TextView
+            style="@style/SettingTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Customize Appearance" />
 
-        <ImageView
-            android:id="@+id/theme0"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:padding="8dp"
-            android:src="@drawable/bg_px_purple" />
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:scrollbars="none">
 
-        <ImageView
-            android:id="@+id/theme1"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:padding="8dp"
-            android:src="@drawable/bg_px_red" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bkg_button"
+                android:orientation="horizontal"
+                android:weightSum="6">
 
-        <ImageView
-            android:id="@+id/theme2"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:padding="8dp"
-            android:src="@drawable/bg_px_green" />
+                <ImageView
+                    android:id="@+id/theme0"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_px_purple" />
 
-        <ImageView
-            android:id="@+id/theme3"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:padding="8dp"
-            android:src="@drawable/bg_px_orange" />
+                <ImageView
+                    android:id="@+id/theme1"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_px_red" />
 
-        <ImageView
-            android:id="@+id/theme4"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
-            android:padding="8dp"
-            android:src="@drawable/bg_px_white" />
+                <ImageView
+                    android:id="@+id/theme2"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_px_green" />
 
-        <ImageView
-            android:id="@+id/theme_custom"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@drawable/bkg_button"
+                <ImageView
+                    android:id="@+id/theme3"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_px_orange" />
+
+                <ImageView
+                    android:id="@+id/theme4"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_px_white" />
+
+                <ImageView
+                    android:id="@+id/theme5"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/bg_meta" />
+
+                <ImageView
+                    android:id="@+id/theme_custom"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bkg_button_trans"
+                    android:padding="8dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bkg_custom"
+                    android:tint="#3B90D1" />
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bkg_button_pad"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/icons_size"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+            <SeekBar
+                android:id="@+id/bar_scale"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:max="255"
+                android:padding="0dp"
+                android:progressBackgroundTint="@android:color/white"
+                android:progressDrawable="@drawable/seekbar_custom"
+                android:thumb="@null" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bkg_button_pad"
+            android:orientation="horizontal"
             android:padding="10dp"
-            android:src="@drawable/bkg_custom"
-            android:tint="#3B90D1" />
-    </LinearLayout>
+            android:visibility="gone">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bkg_button"
-        android:orientation="horizontal"
-        android:padding="10dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/background_opacity"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="0dp"
+            <SeekBar
+                android:id="@+id/bar_opacity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:max="255"
+                android:padding="0dp"
+                android:progressDrawable="@drawable/seekbar_custom"
+                android:thumb="@null" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/icons_size"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bkg_button_pad"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-        <SeekBar
-            android:id="@+id/bar_scale"
-            android:layout_width="0dp"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/show_app_names"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/switch_names"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:max="255"
-            android:padding="0dp"
-            android:progressBackgroundTint="@android:color/white"
-            android:progressDrawable="@drawable/seekbar_custom"
-            android:thumb="@null" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bkg_button_pad"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/wide_vr"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/switch_wide_vr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bkg_button_pad"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/wide_2d"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/switch_wide_2d"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumb="@drawable/switch_thumb_custom"
+                android:track="@drawable/switch_track_custom" />
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bkg_button"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/background_opacity"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
-
-        <SeekBar
-            android:id="@+id/bar_opacity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:max="255"
-            android:padding="0dp"
-            android:progressDrawable="@drawable/seekbar_custom"
-            android:thumb="@null" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bkg_button"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/show_app_names"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
-
-        <Switch
-            android:id="@+id/switch_names"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:thumb="@drawable/switch_thumb_custom"
-            android:track="@drawable/switch_track_custom" />
-    </LinearLayout>
-</LinearLayout>
+</ScrollView>
