--- a/Launcher/App/src/main/res/layout/lv_app_wide.xml
+++ b/Launcher/App/src/main/res/layout/lv_app_wide.xml
@@ -5,22 +5,20 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bkg_app"
     android:gravity="center"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clip"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:background="@drawable/bkg_app">
 
         <Button
             android:id="@+id/moreButton"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:background="@drawable/more_selector"
-            android:paddingTop="8dp"
-            android:paddingEnd="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,7 +39,7 @@
             android:id="@+id/imageLabel"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="fitStart"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="720:405"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,18 +66,6 @@
             app:strokeColor="#80000000"
             app:strokeWidth="1.5dp"
             tools:text="App Name Here" />
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:theme="@style/ThemeOverlay.Holo"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/imageLabel"
-            app:layout_constraintEnd_toEndOf="@+id/imageLabel"
-            app:layout_constraintStart_toStartOf="@+id/imageLabel"
-            app:layout_constraintTop_toTopOf="@+id/imageLabel" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
