--- a/Launcher/App/src/main/res/layout/lv_group.xml
+++ b/Launcher/App/src/main/res/layout/lv_group.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp">
 
     <TextView
         android:id="@+id/textLabel"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         android:paddingTop="5dp"
+        android:paddingRight="20dp"
         android:paddingBottom="5dp"
-        app:strokeColor="#80000000"
-        app:strokeWidth="1.5dp"/>
+        android:singleLine="true"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 
     <View
         android:id="@+id/menu"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/ic_info"
-        android:visibility="gone"/>
+        android:layout_centerVertical="true"
+        android:layout_margin="2dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
+        android:background="@drawable/ic_more"
+        android:visibility="gone" />
 </RelativeLayout>
