--- a/Launcher/App/src/main/res/values/supported_app_prefixes.xml
+++ b/Launcher/App/src/main/res/values/supported_app_prefixes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="non_system_app_prefixes">
+    <string-array name="supported_app_prefixes">
         <item>com.htc.vive.vstreaming</item>
         <item>com.oculus.browser</item>
         <item>com.pico.metricstool</item>
