--- a/Launcher/App/src/main/res/values/styles.xml
+++ b/Launcher/App/src/main/res/values/styles.xml
@@ -16,7 +16,8 @@
     <style name="SettingSubtitle">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">left</item>
+        <item name="android:layout_marginLeft">5dp</item>
     </style>
 
 </resources>
